--- a/login/index.html
+++ b/login/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="form-group">
       <label>Password</label>
-      <input type="Password" class="form-control" id="inputPassword">
+      <input type="password" class="form-control" id="inputPassword">
     </div>
     <button class="btn btn-outline-success my-2 my-sm-0" onclick="login()" type="submit">Log In</button>
   </div>
